--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,7 +28,7 @@ jobs:
         git config --global user.email "actions@github.com"
         git add hello.txt
         git commit -m "Add Hello World"
-        git push https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/hdjsjdjddj/Dakugggg.git
+        git push https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/uxidjfjdjjd/Daki.git
 
     # Keep adding Hello World every 10 minutes (use sleep for 5 minutes in a loop)
     - name: Repeat every 10 minutes
@@ -37,7 +37,7 @@ jobs:
           echo "Hello World" >> hello.txt
           git add hello.txt
           git commit -m "Add Hello World"
-          git push https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/hdjsjdjddj/Dakugggg.git
+          git push https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/uxidjfjdjjd/Daki.git
           sleep 1200  # Sleep for 20 minutes (1200 seconds)
         done
         
